# fsync

./: .gitignore  Cargo.toml  ReadMe.md  fsync.code-workspace
.cargo/: config.toml
.github/workflows/: ci.yml  linux.yml  rust.yml  windows.yml
clients/ctl/src/: tree.rs
clients/ctl/src/nav/: handler.rs  render.rs
clients/ctl/src/new/: drive.rs  mod.rs
clients/fsynctl/: Cargo.toml
clients/fsynctl/src/new/: drive.rs
clients/fsyncui/src-tauri/: Cargo.toml
clients/fsyncui/src-tauri/src/: daemon.rs
clients/lib/: Cargo.toml
clients/lib/src/: cipher.rs  config.rs  drive.rs  instance.rs  lib.rs  new.rs  ts.rs  utils.rs
clients/lib/src/config/: drive.rs
clients/ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
clients/ui-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/ui-tauri/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js
clients/ui-tauri/frontend/src/lib/: ipc.ts  model.ts  progress.ts  utils.ts
clients/ui-tauri/frontend/src/lib/comps/: NavEntryRow.svelte
clients/ui-tauri/frontend/src/routes/: +page.svelte
clients/ui-tauri/frontend/src/routes/connect/: +page.svelte  +page.ts
clients/ui-tauri/frontend/src/routes/nav/[instanceName]/: +page.svelte
clients/ui-tauri/frontend/src/routes/new/: +page.svelte
clients/ui/src/: App.svelte  Connect.svelte  app.css  index.css  main.ts
clients/ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/ui/src-tauri/capabilities/: default.json  desktop.json
clients/ui/src-tauri/src/: daemon.rs  instances.rs  main.rs
clients/ui/src/lib/: api.ts  context-menu.ts  ipc.ts  model.ts  progress.ts  utils.ts
clients/ui/src/lib/comps/: MatSymIcon.svelte  NavEntryRow.svelte  index.ts
clients/ui/src/routes/: +layout.svelte  +page.svelte
clients/ui/src/routes/connect/: +page.svelte  +page.ts
clients/ui/src/routes/nav/[instanceName]/: +page.svelte  +page.ts
clients/ui/src/routes/new/: +page.svelte
fsync/: Cargo.toml
fsync/src/: cache.rs  cipher.binkey  cipher.rs  client_utils.rs  config.rs  conflict.rs  difftree.rs  error.rs  fs.rs  fsync.rs  http.rs  ipc.rs  lib.rs  loc.rs  locs.rs  oauth.rs  oauth2.rs  path.rs  provider.rs  stat.rs  storage.rs  tree.rs
fsync/src/backend/: fs.rs  gdrive.rs  mod.rs
fsyncd/: Cargo.toml
fsyncd/src/: bin.rs  cache.rs  config.rs  difftree.rs  main.rs  posix.rs  service.rs  tree.rs  windows.rs
fsyncd/src/lib/: lib.rs  oauth.rs  oauth2.rs  service.rs  storage.rs  tree.rs
fsyncd/src/lib/oauth2/: mod.rs  pkce.rs  server.rs  token_cache.rs
fsyncd/src/lib/storage/: cache.rs  drive.rs  fs.rs  gdrive.rs  id.rs  mod.rs
fsynctl/: Cargo.toml  fsyncd@.service
fsynctl/src/: conflicts.rs  create.rs  entry.rs  list.rs  main.rs  nav.rs  new.rs  sync.rs  tree.rs  utils.rs
fsynctl/src/nav/: handler.rs  menu.rs  mod.rs  render.rs  ui.rs
fsynctl/src/new/: drive.rs  google_drive.rs  mod.rs
fsyncui/: package-lock.json  package.json
fsyncui/src-tauri/: Cargo.toml
gdrive/: .gitignore  Cargo.toml
gdrive/src/: lib.rs
tests/: .gitignore  Cargo.toml
tests/local/: both.txt  only-local.txt
tests/local/both/: both.txt  local-only.txt
tests/local/both/deep/: file2.txt
tests/local/only-local/: file1.txt  file2.txt
tests/local/only-local/deep/: file1.txt  file2.txt
tests/remote/: both.txt  only-remote.txt
tests/remote/both/: remote-only.txt
tests/remote/both/deep/: file1.txt
tests/remote/only-remote/: file1.txt  file2.txt
tests/remote/only-remote/deep/: file1.txt  file2.txt
tests/src/: bin.rs  config.rs  dataset.rs  harness.rs  tests.rs  utils.rs
tests/src/stubs/: drive.rs  fs.rs  id.rs
