[workspace]
members = ["fsync", "fsyncd", "fsynctl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Rémi THEBAULT"]
description = "A file synchronization service"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.77", features = ["backtrace"] }
async-stream = "0.3.5"
async-trait = "0.1.74"
chrono = {version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
serde = "1.0.193"
serde_json = "1.0.108"
tarpc = { version = "0.33.0", features = ["full"] }
tokio = { version = "1.33.0", features = [
    "fs",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
yup-oauth2 = { version = "8.3.0", features = ["hyper-rustls"] }
