[workspace]
members = [
    "fsync",
    "fsyncd",
    "clients/lib",
    "clients/ctl",
    "clients/ui/src-tauri",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Rémi THEBAULT"]
description = "A file synchronization service"
edition = "2021"

[workspace.dependencies]
aes = "0.8.3"
anyhow = { version = "1.0.77", features = ["backtrace"] }
async-read-progress = { version = "0.2.0" }
async-stream = "0.3.5"
async-trait = "0.1.74"
base64 = "0.21"
bincode = "1.3.3"
byte-unit = "5.1.2"
bytes = "1.5.0"
camino = { version = "1.1.6", features = ["serde1"] }
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
ctr = "0.9.2"
dashmap = { version = "5.5.3", features = ["serde"] }
dirs = "5.0.1"
env_logger = "0.10.1"
eventlog = "0.2.2"
futures = "0.3.29"
glob = "0.3.1"
http = "0.2.9"
inquire = { version = "0.6.2", features = ["editor"] }
log = "0.4.20"
oauth2 = { version = "4.4.2", default-features = false }
rand = "0.8"
reqwest = { version = "0.11.23", features = ["json", "stream"] }
serde = "1.0.193"
serde_json = "1.0.108"
systemd-journal-logger = "2.1.1"
tarpc = { version = "0.34.0", features = ["full"] }
tokio = { version = "1.33.0", features = [
    "fs",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "signal",
    "time",
    "tracing",
] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
url = "2.5.0"
webbrowser = "0.8.12"
windows-service = "0.6.0"
