[package]
name = "fsync"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
yup-oauth2 = { workspace = true }

aes = "0.8.3"
base64 = "0.21"
bincode = "1.3.3"
bytes = "1.5.0"
camino = {version = "1.1.6", features = ["serde1"] }
ctr = "0.9.2"
dashmap = { version = "5.5.3", features = ["serde"] }
dirs = "5.0.1"
glob = "0.3.1"
http = "0.2.9"
hyper = { version = "0.14", features = ["client", "http2", "stream"] }
hyper-rustls = { version = "0.24", features = ["http2"] }
rand = "0.8"
tokio-util = { version = "0.7.10", features = ["compat"] }
url = "2.5.0"
webbrowser = "0.8.12"
