[package]
name = "fsync"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
aes = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
ctr = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
http = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
typescript-type-def = { workspace = true }
webbrowser = { workspace = true }
