[package]
name = "fsyncd"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "fsyncd_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "fsyncd"
path = "src/bin.rs"

[dependencies]
fsync = { path = "../fsync" }

anyhow = { workspace = true }
async-stream = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }
