[package]
name = "fsyncd"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "fsyncd"
path = "src/lib/lib.rs"

[[bin]]
name = "fsyncd"
path = "src/bin.rs"

# [features]
# windows_service = ["dep:windows-service"]

[dependencies]
fsync = { path = "../fsync" }

# windows-service = {version="0.6.0", optional=true}
windows-service = "0.6.0"

anyhow = { workspace = true }
async-stream = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }
