[package]
name = "fsyncd"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[lib]
name = "fsyncd"
path = "src/lib/lib.rs"

[[bin]]
name = "fsyncd"
path = "src/bin.rs"

[dependencies]
fsync = { path = "../fsync" }

anyhow = { workspace = true }
async-stream = { workspace = true }
bincode = { workspace = true }
byte-unit = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
webbrowser = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-service = { workspace = true }
eventlog = { workspace = true }

[target.'cfg(unix)'.dependencies]
systemd-journal-logger = { workspace = true }
