[package]
name = "fsynctl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
fsync = { path = "../fsync" }

anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
yup-oauth2 = { workspace = true }

byte-unit = "5.1.2"
inquire = { version = "0.6.2", features = ["editor"] }
