[package]
name = "fsynctl"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
fsync = { path = "../fsync" }

anyhow = { workspace = true }
byte-unit = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
yup-oauth2 = { workspace = true }
