[package]
name = "fsynctl"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
fsync = { path = "../fsync" }

anyhow = { workspace = true }
byte-unit = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
inquire = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
