[package]
name = "gdrive"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsync = { path = "../fsync" }
async-stream = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
google-drive3 = { workspace = true }
tokio = { workspace = true }

hyper = "0.14.27"
hyper-rustls = "0.24.2"
