[package]
name = "gdrive"
version.workspace = true
authors.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsync = { path = "../fsync" }
async-stream = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
google-drive3 = { workspace = true }
hyper = { workspace = true }
hyper-rustls = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
yup-oauth2 = { workspace = true }
