[package]
name = "fsync-client"
description = "Client library for Fsync"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
fsync = { path = "../../fsync" }

aes = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
ctr = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tarpc = { workspace = true }
tokio = { workspace = true }
typescript-type-def = { workspace = true }
