[package]
name = "fsyncui"
description = "File Synchronization Service"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
fsync-client = { path = "../../lib" }
typescript-type-def = { workspace = true }
tauri-build = { version = "1", features = [] }

[dependencies]
fsync = { path = "../../../fsync" }
fsync-client = { path = "../../lib" }

anyhow = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
typescript-type-def = { workspace = true }

tauri = { version = "1", features = [ "path-all",
    "dialog-open",
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
